# convoy-analysis

./: environment.yml  pyproject.toml  requirements.txt
code/: common_basis.R  common_basis.py
code/jiemakel/: convoy-analysis-2.Rmd  convoy-analysis-2.nb.html  convoy-analysis.Rmd  convoy-analysis.nb.html  python-analysis-example.ipynb  python-analysis-example.py  tree-test.Rmd
code/jiemakel/.ipynb_checkpoints/: python-analysis-example-checkpoint.ipynb  python-analysis-example-checkpoint.py
code/jiemakel/rsconnect/documents/convoy-analysis-2.Rmd/rpubs.com/rpubs/: Document.dcf
code/jiemakel/rsconnect/documents/convoy-analysis.Rmd/rpubs.com/rpubs/: Document.dcf  Publish Document.dcf
