[tool.poetry]
name = "convoy-analysis"
version = "0.1.0"
description = ""
authors = ["Eetu Mäkelä <eetu.makela@iki.fi>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
pandas = "^1.4.2"
SQLAlchemy = "^1.4.36"
numpy = "^1.22.3"
PyMySQL = "^1.0.2"
keyring = "^23.5.0"
scipy = "^1.8.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

