[tool.poetry]
name = "convoy-analysis"
version = "0.1.0"
description = ""
authors = ["Eetu Mäkelä <eetu.makela@iki.fi>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
pandas = "^1.4.2"
SQLAlchemy = "^1.4.36"
numpy = "^1.22.3"
PyMySQL = "^1.0.2"
keyring = "^23.4.0"
scipy = "^1.8.0"
seaborn = "^0.11.2"
jupytext = "^1.13.8"
jupyterlab = "^3.4.1"

[tool.poetry.dev-dependencies]

[tool.poetry2conda]
name = "convoy-analysis"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

